httpd/httpd_destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpd
spec:
  host: httpd
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
