httpd/httpd_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd
  namespace: httpd
spec:
  gateways:
  - httpd-gateway
  hosts:
  - foo.com
  http:
  - match:
    - uri:
        exact: /index.html
    route:
    - destination:
        host: httpd
        port:
          number: 8080
